// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results renders attract report 1`] = `
<div
  className="mock"
>
  Attract
</div>
`;

exports[`Results renders candidate report 1`] = `
<div
  className="mock"
>
  Candidate
</div>
`;

exports[`Results renders cognitive results 1`] = `
<div
  className="mock"
>
  Cognitive
</div>
`;

exports[`Results renders dimension based results 1`] = `
<div
  className="mock"
>
  Candidate
</div>
`;

exports[`Results renders employee report 1`] = `
<div
  className="mock"
>
  Employee
</div>
`;

exports[`Results renders financial risk results 1`] = `
<div
  className="mock"
>
  Financial Risk
</div>
`;

exports[`Results renders manager report 1`] = `
<div
  className="mock"
>
  Manager
</div>
`;

exports[`Results renders nothing if not ready 1`] = `null`;
